--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -282,6 +282,91 @@
         transform: scale(0.9) translateY(-5px);
     }
 
+    .cursos{
+        background: url("../img/background.png");
+        background-size: cover;
+        background-position: center;
+    }
+
+    .cursos_contenido{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px, auto));
+        gap: 2rem;
+        align-items: center;
+        margin-top: 4rem;
+        cursor: pointer;
+        border-radius: 15px;
+    }
+
+    .fila{
+        background: var(--bg-color);
+        padding: 0px 0px 10px 0px;
+        border-radius: 20px;
+        box-shadow: 0px 5px 40px rgb(19 8 73 / 13%);
+        transition: all .40s ease;
+    }
+
+    .fila:hover{
+        transform: translateY(-15px);
+    }
+
+    .fila img{
+        width: 100%;
+        height: 320px;
+        object-fit: cover;
+        border-radius: 15px 15px 0px 0px;
+    }
+
+    .cursos_texto{
+        padding: 35px 20px;
+    }
+
+    .cursos_texto h5{
+        color: var(--second-color);
+        font-size: 18px;
+        font-weight: 700;
+    }
+
+    .cursos_texto h3{
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 34px;
+        margin: 15px 0 15px;
+        transition: all .40s ease;
+    }
+
+    .cursos_texto h3:hover{
+        color: var(--second-color);
+    }
+
+    .cursos_texto h6{
+        color: #696969;
+        font-size: var(--p-font);
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 1px;
+        margin-bottom: 30px;
+    }
+
+    .clasificacion{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .estrellas i{
+        color: var(--second-color);
+        margin-right: 2px;
+        font-size: 17px;
+    }
+
+    .reseñas p{
+        color: #696969;
+        font-size: var(--p-font);
+        font-weight: 400;
+        letter-spacing: 1px;
+    }
 
 
 
