--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -158,7 +158,7 @@
         width: 100%;
     }
 
-    /* ----------- Estilos cajas  ----------- */
+    /* ----------- Estilos contenido partes ----------- */
 
     .container{
         padding: 70px 13%;
@@ -366,6 +366,195 @@
         font-size: var(--p-font);
         font-weight: 400;
         letter-spacing: 1px;
+    }
+
+    .sobre_nosotros{
+        /*background: url("../img/background2.png");
+        background-size: cover;
+        background-position: center;*/
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+        align-items: center;
+    }
+
+    .sobre_nosotros_img img{
+        width: 100%;
+        height: auto;
+    }
+
+    .nosotros_texto h2{
+        font-size: var(--h2-font);
+        line-height: 1.2;
+        margin-bottom: 20px;
+    }
+
+    .nosotros_texto p{
+        font-size: var(--p-font);
+        color: var(--three-color);
+        font-weight: 500;
+        line-height: 30px;
+        margin-bottom: 30px;
+    }
+
+    .contacto{
+        padding: 60px 13%;
+        background: var(--bg-color);
+    }
+
+    .contacto_main{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+        gap: 2rem;
+    }
+
+    .contacto_contenido img{
+        height: auto;
+        width: 200px;
+        max-width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .contacto_contenido li{
+        margin-bottom: 18px;
+    }
+
+    .contacto_contenido li a{
+        display: block;
+        color: var(--text-color);
+        font-weight: 500;
+        font-size: 15px;
+        transition: all .40s ease;
+    }
+
+    .contacto_contenido li a:hover{
+        transform: translateX(10px);
+        color: var(--second-color);
+    }
+
+    .copy p{
+        text-align: center;
+        padding: 18px;
+        color: var(--three-color);
+        font-size: 15px;
+        font-weight: 500;
+        letter-spacing: 1px;
+    }
+
+/* ----------- Estilos responsive inicio ----------- */
+
+    @media (max-width: 1410px){
+
+        header{
+            padding: 10px 3%;
+            transition: .2s;
+        }
+
+        header.sticky{
+            padding: 12px 3%;
+            transition: .2s;
+        }
+
+        section{
+            padding: 70px 3%;
+            transition: .2s;
+        }
+
+        .container{
+            padding: 70px 3%;
+            transition: .2s;
+        }
+
+        .contacto{
+            padding: 60px;
+            transition: .2s;
+        }
+    }
+
+    @media (max-width: 1050px){
+
+        :root{
+            --h1-font: 3.2rem;
+            --h2-font: 2rem;
+            --p-font: 1rem;
+            transition: .1s;
+        }
+
+        .home{
+            height: 84vh;
+        }
+    }
+
+    @media (max-width: 1025px){
+
+        #menu-icon{
+            display: block;
+            font-size: 25px;
+            margin-left: 10px;
+        }
+
+        .navegacion{
+            position: absolute;
+            top: 100%;
+            right: -100%;
+            width: 300px;
+            height: 110vh;
+            background: var(--second-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 170px 30px;
+            transition: all .40s ease;
+        }
+
+        .navegacion a{
+            display: block;
+            margin: 1.3rem 0;
+            color: var(--bg-color);
+        }
+
+        .navegacion a:hover{
+            color: var(--bg-color);
+            transform: translateY(-5px);
+        }
+
+        .navegacion.open{
+            right: 0;
+        }
+    }
+
+    @media (max-width: 890px){
+
+        .home{
+            height: 150vh;
+            grid-template-columns: 1fr;
+            gap: 1rem;
+        }
+
+        .home-text{
+            padding-top: 20px;
+        }
+
+        .home-img{
+            text-align: center;
+        }
+
+        .home-img img{
+            height: auto;
+            width: 100%;
+        }
+
+        .about{
+            grid-template-columns: 1fr;
+            gap: 1rem;
+        }
+    }
+
+    @media (max-width: 600px){
+
+        .home{
+            height: 120vh;
+        }
     }
 
 
