--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -441,6 +441,36 @@
         letter-spacing: 1px;
     }
 
+/* ----------- Estilos página todas categorias ----------- */
+
+    .todas_categorias_contenido{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px, auto));
+        gap: 1.5rem;
+        align-items: center;
+        cursor: pointer;
+        text-align: center;
+        margin-top: 4rem;
+    }
+
+    .texto_centrado_general{
+        text-align: center;
+    }
+
+    .texto_centrado_general h5{
+        color: var(--second-color);
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 1px;
+        margin-bottom: 20px;
+        margin-top: 100px;
+    }
+
+    .texto_centrado_general h2{
+        font-size: var(--h2-font);
+        line-height: 1.2;
+    }
+
 /* ----------- Estilos responsive inicio ----------- */
 
     @media (max-width: 1410px){
